<resources>
	<string name="app_name">MOTI</string>
	<string name="user_agreement"><u>MOTI\'s User Agreement</u></string>
	<string name="user_agreement_content">By creating an account you are agreeing to</string>
	<string name="sub_title">Make Own True Identity</string>
	<string name="set_nickname">닉네임 설정</string>
	<string name="set_gender">성별 선택</string>
	<string name="set_birthday">생년월일 선택</string>
	<string name="complete_signup">회원가입 완료</string>
	<string name="input_nickname">닉네임을 입력해주세요</string>
	<string name="input_gender">성별을 선택해주세요</string>
	<string name="input_nickname_hint">8글자로 만들어주세요</string>
	<string name="next">다음</string>
	<string name="jump">건너뛰기</string>
	<string name="input_birthday">생년월일을 입력해주세요</string>
	<string name="sign_up_complete">회원가입 완료</string>
	<string name="start">시작하기</string>
	<string name="mypage">마이페이지</string>
	<string name="album">앨범</string>
	<string name="diary">다이어리</string>
	<string name="nickname">닉네임</string>
	<string name="birth">생년월일</string>
	<string name="gender">성별</string>
	<string name="version_info">버전 정보</string>
	<string name="qa">문의하기</string>
	<string name="user_agreement_kr">개인정보취급방침 및 이용약관</string>
	<string name="answer_text">이곳에 질문에 대한 답을 적어주세요.</string>
	<string name="answer_complete">확인하러 가기</string>
	<string name="again_question">질문 다시 받기</string>
	<string name="reply">답변하기</string>
    <string name="complete">완료</string>
    <string name="select_mission">질문 선택</string>
    <string name="mission_complete">미션 완료</string>
	<string formatted="false" name="sign_up_complete_content">%s님\n회원가입을\n축하합니다.</string>
    <string name="edit">수정하기</string>
	<string name="resign">탈퇴하기</string>
	<string name="sign_out">로그아웃</string>
	<string name="saved">저장하기</string>
	<string name="album_empty">아직 수집된 드림캐처가 없습니다.</string>
	<string name="diary_empty">기록된 다이어리가 없습니다.</string>
	<string name="dialog_sign_out">로그아웃 하시겠습니까?</string>
	<string name="yes">확인</string>
	<string name="cancel">취소</string>
	<string name="dialog_withdrawal">탈퇴하시겠습니까?</string>


	출처: https://gogorchg.tistory.com/entry/AndroidDataBinding-String-Format-적용하기 [항상 초심으로]

</resources>