<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ahobsu.moti.presentation.ui.mypage.MyPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_mypage_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_title"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/rose_gold"
            android:textSize="19dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_tv_mypage"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_gold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@string/nickname"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/view_tv_mypage" />

        <TextView
            android:id="@+id/tv_mypage_nickname"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@{viewModel.user.name}"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintStart_toStartOf="@+id/tv_mypage_title"
            app:layout_constraintTop_toBottomOf="@id/view_tv_mypage" />


        <View
            android:id="@+id/view_mypage_nickname"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/light_gold"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintStart_toStartOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_nickname" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@string/birth"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_nickname" />

        <TextView
            android:id="@+id/tv_mypage_birth"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@{viewModel.user.birthday}"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintStart_toStartOf="@+id/tv_mypage_title"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_nickname" />


        <View
            android:id="@+id/viewmypage_birth"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/light_gold"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintStart_toStartOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_birth" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@string/gender"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_birth" />

        <TextView
            android:id="@+id/tv_mypage_gender"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@{viewModel.user.gender}"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintStart_toStartOf="@+id/tv_mypage_title"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_birth" />


        <View
            android:id="@+id/tv_mypage_view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@color/light_gold"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintStart_toStartOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_gender" />

        <TextView
            android:id="@+id/tv_mypage_version"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@string/sign_out"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_view2" />

        <TextView
            android:id="@+id/tv_mypage_qa"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@string/resign"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_version" />


        <TextView
            android:id="@+id/btn_sign_up_next_shadow"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_marginBottom="126dp"
            android:background="@drawable/shadow_stack"
            android:backgroundTint="@color/rose_gold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btn_sign_up_next"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@drawable/radius_20"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:onClick="@{() -> viewModel.onClickSavedMyPage()}"
            android:text="@string/saved"
            android:textColor="@color/pinkish_tan"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_sign_up_next_shadow"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_up_next_shadow"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_up_next_shadow"
            app:layout_constraintTop_toTopOf="@id/btn_sign_up_next_shadow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>