<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ahobsu.moti.presentation.ui.mypage.MyPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:clickable="true">

        <TextView
            android:fontFamily="@font/apple_sd_r"
            android:id="@+id/tv_mypage_title"
            android:layout_width="0dp"
            android:layout_height="@dimen/mypage_title"
            android:gravity="center"
            android:text="@string/mypage"
            android:textColor="@color/rose_gold"
            android:textSize="19dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_mypage_edit"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_rewrite"
            app:layout_constraintBottom_toBottomOf="@id/tv_mypage_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_mypage_title" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_camera_normal"
            app:layout_constraintBottom_toBottomOf="@id/iv_mypage_image"
            app:layout_constraintEnd_toEndOf="@id/iv_mypage_image"
            app:layout_constraintStart_toStartOf="@id/iv_mypage_image"
            app:layout_constraintTop_toTopOf="@id/iv_mypage_image" />

        <ImageView
            android:id="@+id/iv_mypage_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/radius_borderline_circle"
            android:padding="5dp"
            app:filterImageUrl="@{viewModel.profileUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_title" />

        <TextView
            android:id="@+id/tv_mypage_name"
            android:fontFamily="@font/iropke_batang_otfm"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/mypage"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_mypage_image" />

        <View
            android:id="@+id/view_tv_mypage"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_gold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_name" />

        <TextView
            android:fontFamily="@font/apple_sd_r"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@string/nickname"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/view_tv_mypage" />

        <TextView
            android:id="@+id/tv_mypage_nickname"
            android:fontFamily="@font/apple_sd_r"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@{viewModel.user.name}"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/view_tv_mypage" />


        <TextView
            android:fontFamily="@font/apple_sd_r"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@string/birth"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_nickname" />

        <TextView
            android:id="@+id/tv_mypage_birth"
            android:fontFamily="@font/apple_sd_r"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@{viewModel.user.birthday}"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_nickname" />

        <TextView
            android:fontFamily="@font/apple_sd_r"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@string/gender"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_birth" />

        <TextView
            android:id="@+id/tv_mypage_gender"
            android:fontFamily="@font/apple_sd_r"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@{viewModel.user.gender}"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_birth" />


        <View
            android:id="@+id/tv_mypage_view2"
            android:fontFamily="@font/apple_sd_r"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@color/light_gold"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintStart_toStartOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_gender" />

        <TextView
            android:fontFamily="@font/apple_sd_r"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@string/version_info"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_view2" />

        <TextView
            android:id="@+id/tv_mypage_version"
            android:fontFamily="@font/apple_sd_r"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_view2" />

        <TextView
            android:id="@+id/tv_mypage_qa"
            android:fontFamily="@font/apple_sd_r"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@string/qa"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_version" />

        <TextView
            android:id="@+id/tv_mypage_user_agreement"
            android:fontFamily="@font/apple_sd_r"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/mypage_text_h"
            android:gravity="center"
            android:text="@string/user_agreement_kr"
            android:onClick="@{() -> viewModel.onClickUserAgreement(context)}"
            android:textColor="@color/rose_gold"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@id/view_tv_mypage"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_qa" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>