<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.ahobsu.moti.presentation.ui.login.LoginViewModel.SignUpFragment" />
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ahobsu.moti.presentation.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/bg_gradient"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:onClick="@{() -> viewModel.onClickPopFragment()}"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="@id/tv_birthday_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_birthday_title" />

        <TextView
            android:id="@+id/tv_birthday_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="28dp"
            android:paddingBottom="25dp"
            android:text="@string/set_birthday"
            android:textColor="@color/rose_gold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_birthday_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/input_birthday"
            android:textColor="@color/rose_gold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_birthday_title" />

        <com.ahobsu.moti.presentation.cuscomview.DateSpinnerCustomView
            android:id="@+id/data_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="7dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_birthday_input"
            app:layout_constraintStart_toStartOf="@+id/tv_birthday_input"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />


        <TextView
            android:id="@+id/btn_sign_up_next_shadow"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:background="@drawable/shadow_stack"
            android:backgroundTint="@color/rose_gold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_birthday_title"
            app:layout_constraintVertical_bias="0.75" />

        <TextView
            android:id="@+id/btn_sign_up_next"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@drawable/radius_20"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:onClick="@{() -> viewModel.onClickNextFragment(SignUpFragment.Complete,true)}"
            android:text="@string/next"
            android:textColor="@color/pinkish_tan"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_sign_up_next_shadow"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_up_next_shadow"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_up_next_shadow"
            app:layout_constraintTop_toTopOf="@id/btn_sign_up_next_shadow" />


        <TextView
            android:id="@+id/tv_birthday_input_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:onClick="@{() -> viewModel.onClickNextFragment(SignUpFragment.Complete,true)}"
            android:text="@string/jump"
            android:textColor="@color/rose_gold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_up_next"
            app:layout_constraintStart_toStartOf="@id/btn_sign_up_next"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>