<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="com.ofu.moti.login.LoginViewModel.SignUpFragment" />

        <variable
            name="viewModel"
            type="com.ofu.moti.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/bg_gradient"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_arrow_left"
            android:onClick="@{() -> viewModel.onClickPopFragment()}"
            app:layout_constraintBottom_toBottomOf="@id/tv_nickname_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_nickname_title" />

        <TextView
            android:id="@+id/tv_nickname_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="28dp"
            android:paddingBottom="25dp"
            android:text="@string/set_nickname"
            android:textColor="@color/rose_gold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nickname_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/input_nickname"
            android:textColor="@color/rose_gold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname_title" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gold_brown"
            android:gravity="center"
            android:hint="@string/input_nickname_hint"
            android:maxLength="8"
            android:onTextChanged="@{viewModel::onTextChanged}"
            android:text="@={viewModel.etNickname}"
            android:textColor="@color/rose_gold"
            android:textColorHint="@color/support_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_nickname_input"
            app:layout_constraintStart_toStartOf="@+id/tv_nickname_input"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nickname_input_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/input_nickname_hint"
            android:textColor="@color/shadow_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/et_nickname"
            app:layout_constraintStart_toStartOf="@id/et_nickname"
            app:layout_constraintTop_toBottomOf="@id/et_nickname" />

        <TextView
            android:id="@+id/btn_sign_up_next_shadow"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/shadow_stack"
            android:backgroundTint="@color/rose_gold"
            android:visibility="@{viewModel.toTheNextStep ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/et_nickname"
            app:layout_constraintStart_toStartOf="@id/et_nickname"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname_title"
            app:layout_constraintVertical_bias="0.75" />

        <TextView
            android:id="@+id/btn_sign_up_next"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@drawable/radius_20"
            android:backgroundTint="@{viewModel.toTheNextStep ? @color/white : @color/disable_black}"
            android:gravity="center"
            android:onClick="@{() -> viewModel.onClickNextFragment(SignUpFragment.Gender,viewModel.toTheNextStep )}"
            android:text="@string/next"
            android:textColor="@{viewModel.toTheNextStep ? @color/pinkish_tan : @color/disable_text}"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_sign_up_next_shadow"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_up_next_shadow"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_up_next_shadow"
            app:layout_constraintTop_toTopOf="@id/btn_sign_up_next_shadow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>